CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(lib_common)
MESSAGE(STATUS "======================")
MESSAGE(STATUS "lib_common start ...")
INCLUDE("../CMakeMacro.txt")

SET(SRC_DIR "${PROJECT_SOURCE_DIR}/../../SHARECODE/src/lib_common")
SET(HED_DIR "${PROJECT_SOURCE_DIR}/../../SHARECODE/include/lib_common")
SET(ZLIB_HED_DIR "${PROJECT_SOURCE_DIR}/../../SHARECODE/include/lib_zlib")
GET_FILENAME_COMPONENT(SRC_DIR ${SRC_DIR} ABSOLUTE)
GET_FILENAME_COMPONENT(HED_DIR ${HED_DIR} ABSOLUTE)
GET_FILENAME_COMPONENT(ZLIB_HED_DIR ${ZLIB_HED_DIR} ABSOLUTE)

FILE(GLOB_RECURSE SRC_LIST "${SRC_DIR}/*.cpp")
FILE(GLOB_RECURSE HED_LIST "${HED_DIR}/*.h")

MESSAGE(STATUS "This is BINARY dir ${PROJECT_BINARY_DIR}")
MESSAGE(STATUS "This is SOURCE dir ${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "This is SRC_DIR ${SRC_DIR}")
MESSAGE(STATUS "This is HED_DIR ${HED_DIR}")
MESSAGE(STATUS "ZLIB_HED_DIR ${ZLIB_HED_DIR}")

INCLUDE_DIRECTORIES(${HED_DIR})
INCLUDE_DIRECTORIES(${ZLIB_HED_DIR})
ADD_LIBRARY(lib_common STATIC ${SRC_LIST} ${HED_LIST})

init_base_project()
source_group_by_dir(${SRC_DIR} "source" SRC_LIST)
source_group_by_dir(${HED_DIR} "header" HED_LIST)


